--- a/portfolio.html
+++ b/portfolio.html
@@ -22,10 +22,6 @@
         font-weight: 300;
     }
     
-    .row_custom {
-        margin-right: 20px;
-    }
-    
     .text-fade {
         color: #BCBBBB;
     }
@@ -52,29 +48,11 @@
 </head>
 
 <body>
-    <!-- Modal -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
-                    </button>
-                    <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-                </div>
-                <div class="modal-body">...
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="container row_custom">
+    <div id="container">
         <!-- How to decide when to give class and or id -->
-        <div class="row>
+        <div class="row">
             <div id=" udemylogog " class="col-md-6 logo_super ">
-                <img src="images/udemyLogo.png?raw=true " alt="Udemy logo " />
+                <img class="img-responsive" src="images/udemyLogo.png?raw=true " alt="Udemy logo " />
             </div>
             <div id="name " class="col-md-6 ">
                 <h3 class="text-right text-uppercase text-thin title_super ">Vijay Kulkarni</h3>
