--- a/portfolio.html
+++ b/portfolio.html
@@ -5,129 +5,125 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Vijay Kulkarni's Portfolio</title>
-    <!-- Latest compiled and minified CSS -->
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
-    <!--link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" -->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/portfolio.css">
     <link href='https://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'>
-
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!--script type="text/javascript" src="js/bootstrap.min.js"></script -->
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
 
 <body>
-    <div id="container" class="center-block">
+    <div id="container">
         <div class="row">
-            <div id="udemylogog" class="col-md-6 logo_super ">
-                <img class="img-responsive" src="images/images_src/fixed/udemyLogo.png?raw=true" alt="Udemy logo " />
+            <div id="udemylogog" class="col-md-6 logo-super">
+                <img class="img-responsive" src="images/images_src/fixed/udemyLogo.png?raw=true" alt="Udemy logo" />
             </div>
-            <div id="name " class="col-md-6 ">
-                <h3 class="text-right text-uppercase text-thin title_super ">Vijay Kulkarni</h3>
-                <h4 class="text-right text-uppercase ">Front-end Developer (Aspirant)</h4>
+            <div id="name" class="col-md-6">
+                <h3 class="text-right text-uppercase text-thin title-super">Vijay Kulkarni</h3>
+                <h4 class="text-right text-uppercase">Front-end Developer (Aspirant)</h4>
             </div>
         </div>
         <hr>
-        <div id="mainDiv" class="row ">
-            <div class="col-md-12 ">
-                <!--img id="mainImage " class="img-responsive fixImage" src="images/mainImage-1024_large_2x.jpg" alt="main image placeholder " /-->
-                <img class="img-responsive fixImage" 
-                  src="images/large/mainImage.jpg"
-                  srcset="images/large/mainImage.jpg 1280w,
+        <!-- navbar -->
+        <div class="row pull-right">
+            <div class="col-md-12">
+                <nav class="navbar navbar-light bg-faded">
+                  <ul class="nav navbar-nav">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="#">Projects<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Interests</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Photos</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">About</a>
+                    </li>
+                  </ul>
+                </nav>
+            </div>
+        </div>
+        <div id="mainDiv" class="row">
+            <div class="col-md-12">
+                <img class="img-responsive fixImage" src="images/large/mainImage.jpg" srcset="images/large/mainImage.jpg 1280w,
                           images/medium/mainImage.jpg 640w,
-                          images/small/mainImage.jpg 320w"
-                     sizes="(min-width: 500px) 50%, 100%"  
-                     alt="main image placeholder">
+                          images/small/mainImage.jpg 320w" sizes="90vw" alt="main image placeholder">
             </div>
         </div>
-        <div class="row ">
-            <div class="col-md-12 ">
-                <h3 class="text-fade ">Certifications</h3>
+        <!--certifications -->
+        <div class="row">
+            <div class="col-md-12">
+                <h3>Certifications</h3>
             </div>
         </div>
-        <div class="row text-center ">
+        <div class="row text-center">
             <div id="footerDivLeft" class="col-md-4">
-                <!--img class="img-responsive fixImage" data-toggle="modal" data-target="#myModal" src="images/iceMountains-500_large_2x.jpg " alt=" SCJP Image" /-->
-                 <img class="img-responsive fixImage" data-toggle="modal" data-target="#myModal" 
-                  src="images/large/iceMountains.jpg"
-                  srcset="images/large/iceMountains.jpg 1280w,
-                          images/small/iceMountains.jpg 640w,
-                          images/small/iceMountains.jpg 320w"
-                     sizes="(min-width: 500px) 50%, 100%"  
-                     alt="iceMountains placeholder">
-                <h3 class="text-uppercase ">Sun Certified Java  Programmer (SCJP)</h3>
+                <figure>
+                    <img class="img-responsive fixImage" data-toggle="modal" data-target="#myModal" src="images/large/iceMountains.jpg" srcset="images/large/iceMountains.jpg 1280w,
+                              images/small/iceMountains.jpg 640w,
+                              images/small/iceMountains.jpg 320w" sizes="(min-width: 500px) 50vw, 100vw" alt="iceMountains placeholder">
+                    <figcaption>Fig.1 - Certification 1 Details</figcaption>
+                </figure>
+                <h3 class="text-uppercase">Sun Certified Java  Programmer (SCJP)</h3>
                 <a href="http://education.oracle.com/pls/web_prod-plq-dad/db_pages.getpage?page_id=653&get_params=p_id:153">SCJP</a>
             </div>
-            <div id="footerDivCenter" class="col-md-4" >
-                <img class="img-responsive fixImage" data-toggle="modal" data-target="#myModal" 
-                  src="images/large/iceMountains.jpg"
-                  srcset="images/large/iceMountains.jpg 1280w,
-                          images/small/iceMountains.jpg 640w,
-                          images/small/iceMountains.jpg 320w"
-                     sizes="(min-width: 500px) 50%, 100%"  
-                     alt="iceMountains placeholder">
-                <h3 class="text-uppercase ">Sun Certified Enterprise Architect (SCEA)</h3>
+            <div id="footerDivCenter" class="col-md-4">
+                <figure>
+                    <img class="img-responsive fixImage" data-toggle="modal" data-target="#myModal" src="images/large/iceMountains.jpg" srcset="images/large/iceMountains.jpg 1280w,
+                              images/small/iceMountains.jpg 640w,
+                              images/small/iceMountains.jpg 320w" sizes="(min-width: 500px) 50vw, 100vw" alt="iceMountains placeholder">
+                        <figcaption>Fig.2- Certification 2 Details</figcaption>
+                 </figure>             
+                <h3 class="text-uppercase">Sun Certified Enterprise Architect (SCEA)</h3>
                 <a href="http://education.oracle.com/pls/web_prod-plq-dad/db_pages.getpage?page_id=653&get_params=p_id:153">SCEA</a>
             </div>
-            <div id="footerDivRight" class="col-md-4 ">
-                 <img class="img-responsive fixImage" data-toggle="modal" data-target="#myModal" 
-                  src="images/large/iceMountains.jpg"
-                  srcset="images/large/iceMountains.jpg 1280w,
+            <div id="footerDivRight" class="col-md-4">
+                <figure>
+                    <img class="img-responsive fixImage" data-toggle="modal" data-target="#myModal" src="images/large/iceMountains.jpg" srcset="images/large/iceMountains.jpg 1280w,
                           images/small/iceMountains.jpg 640w,
-                          images/small/iceMountains.jpg 320w"
-                     sizes="(min-width: 500px) 50%, 100%"  
-                     alt="iceMountains placeholder">
-                <h3 class="text-uppercase ">Udacity Front-End Nano Degree (In progress)</h3>
+                          images/small/iceMountains.jpg 320w" sizes="(min-width: 500px) 50vw, 100vw" alt="iceMountains placeholder">
+                    <figcaption>Fig.3 - Certification 3 Details</figcaption>
+                 </figure>         
+                <h3 class="text-uppercase">Udacity Front-End Nano Degree (In progress)</h3>
                 <a href="https://www.udacity.com/course/front-end-web-developer-nanodegree--nd001">Udacity Front-End Web Developer Nanodegree</a>
             </div>
         </div>
-        <!-- skills matrix -->
-        <div class="row ">
+        <div class="row">
+            <!--skills-->
             <div class="col-md-6">
-                <h3 class="text-fade ">Skills Matrix</h3>
-            </div>
-            <div class="col-md-6">
-                <h3 class="text-fade ">Other Qualities</h3>
-            </div>
-        </div>
-        <div class="row ">
-            <div class="col-md-6">
+                <h3>Skills Matrix</h3>
                 <span class="skills">Java/J2EE</span>
-                <div class="progress progress_custom">
+                <div class="progress progress-custom">
                     <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
                         <span class="sr-only">Java/J2EE</span>
                     </div>
                 </div>
                 <span class="skills">Groovy on Grails</span>
-                <div class="progress progress_custom">
+                <div class="progress progress-custom">
                     <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
                         <span class="sr-only">Groovy on Grails</span>
                     </div>
                 </div>
                 <span class="skills">SQL</span>
-                <div class="progress progress_custom">
+                <div class="progress progress-custom">
                     <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
                         <span class="sr-only">SQL</span>
                     </div>
                 </div>
                 <span class="skills">CSS/JavaScript/HTML</span>
-                <div class="progress progress_custom">
+                <div class="progress progress-custom">
                     <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%">
                         <span class="sr-only">CSS/JavaScript/HTML</span>
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
+                <!--qualities-->
+                <h3>Other Qualities</h3>
                 <div class="panel panel-default">
-                    <!-- List group -->
                     <ul class="list-group">
                         <li class="list-group-item">Quick Learner</li>
                         <li class="list-group-item">Team Player</li>
@@ -136,26 +132,41 @@
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-            </div>
-            <div class="modal-body">
-                <p>Description to be formatted</p>
-            </div>
-            <div class="modal-footer">
-                <div>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
+        <!--footer -->
+        <div class="row">
+            <div class="col-md-12">
+                <footer class="pull-right">
+                    <p><span class="text-left attribute">Posted by</span>: Vijay Kulkarni</p>
+                    <p><span class="text-left attribute">Contact information</span>:<a href="mailto:dummy@email.com">dummy@email.com</a>.</p>
+                </footer>
             </div>
         </div>
     </div>
-
+    
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h3 id="myModalLabel">Certification Information</h3>
+                </div>
+                <div class="modal-body">
+                    <article>
+                        <header>
+                            <h4>Certification Provider</h4>
+                        </header>
+                        <p>These certification exams used to be conducted by Sun Microsystems but now those are conducted by Oracle corporation.</p>
+                    </article>
+                </div>
+                <div class="modal-footer">
+                    <div>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>    
 </body>
 
 </html>
