fixed the div row overflow issue

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,9 +26,9 @@
         </div>
         <hr>
         <!-- navbar -->
-        <div class="row pull-right">
+        <div class="row">
             <div class="col-md-12">
-                <nav class="navbar navbar-light bg-faded">
+                <nav class="navbar navbar-light bg-faded pull-right custom-navbar">
                   <ul class="nav navbar-nav">
                     <li class="nav-item active">
                       <a class="nav-link" href="#">Projects<span class="sr-only">(current)</span></a>
