--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,8 @@
 <body>
     <div id="container">
         <div class="row">
-            <div id="udemylogog" class="col-md-6 logo-super">
-                <img class="img-responsive" src="images/images_src/fixed/udemyLogo.png?raw=true" alt="Udemy logo" />
+            <div id="mainlogo" class="col-md-6 logo-super">
+                <img class="img-responsive main-logo-img" src="images/logo.jpeg" alt="Main logo" />
             </div>
             <div id="name" class="col-md-6">
                 <h3 class="text-right text-uppercase text-thin title-super">Vijay Kulkarni</h3>
@@ -30,9 +30,6 @@
             <div class="col-md-12">
                 <nav class="navbar navbar-light bg-faded pull-right custom-navbar">
                     <ul class="nav navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Projects<span class="sr-only">(current)</span></a>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Interests</a>
                         </li>
@@ -41,6 +38,22 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li role="presentation" class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                              Projects <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Project 1</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Project 1</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Project 1</a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </nav>
