--- a/portfolio.html
+++ b/portfolio.html
@@ -8,13 +8,10 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/portfolio.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
 </head>
 
 <body>
-    <div id="container">
+    <div id="container" class="reduced-width">
         <div class="row">
             <div id="mainlogo" class="col-md-6 logo-super">
                 <img class="img-responsive main-logo-img" src="images/logo.jpeg" alt="Main logo" />
@@ -28,35 +25,17 @@
         <!-- navbar -->
         <div class="row">
             <div class="col-md-12">
-                <nav class="navbar navbar-light bg-faded pull-right custom-navbar">
-                    <ul class="nav navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Interests</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Photos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li role="presentation" class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                              Projects <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Project 1</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Project 1</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Project 1</a>
-                                </li>
-                            </ul>
-                        </li>
+                <nav class="clearfix">
+                    <ul class="clearfix">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Projects</a></li>
+                        <li><a href="#">Hobbies</a></li>
+                        <li><a href="#">Contributions</a></li>
                     </ul>
+                    <a href="#" id="pull">Menu</a>
                 </nav>
+                <div id="canvas">
+                </div>
             </div>
         </div>
         <div id="mainDiv" class="row">
@@ -172,13 +151,15 @@
                     </article>
                 </div>
                 <div class="modal-footer">
-                    <div>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
     </div>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/portfolio.js"></script>
 </body>
 
 </html>
